# rustf

./: .gitignore  CLAUDE.md  HYBRID_SERIALIZATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PERFORMANCE_SERIALIZATION_ANALYSIS.md  README.md  REDIS_CLUSTER_SYNCHRONIZATION.md  REDIS_OPTIMIZATION_EXPLANATION.md  REDIS_SESSION_ANALYSIS.md  REDIS_SESSION_FIXES.md  REDIS_WRITE_ON_READ_EXPLANATION.md  SESSION_STATE.md  WORK_PLAN.md  sample_template.html
rustf/: Cargo.toml
rustf-cli/: Cargo.toml  README.md
rustf-cli/.rustf/: README.md
rustf-cli/.rustf/backups/models/: latest
rustf-cli/src/: main.rs
rustf-cli/src/analysis/: handlers.rs  middleware.rs  mod.rs  views.rs
rustf-cli/src/analyzer/: analysis_cache.rs  ast.rs  cache.rs  files.rs  lookup.rs  lru_cache.rs  metadata.rs  mod.rs  project.rs  streaming.rs
rustf-cli/src/commands/: analyze.rs  analyze_cmd.rs  backups.rs  benchmark.rs  cache_stats.rs  controllers.rs  db.rs  discover.rs  export.rs  middleware.rs  mod.rs  models.rs  new.rs  new_cmd.rs  new_component.rs  perf_cmd.rs  query.rs  routes.rs  serve.rs  serve_cmd.rs  stream.rs  validate.rs  views.rs  watch.rs
rustf-cli/src/commands/db/: common.rs  mysql.rs  postgres.rs  sqlite.rs
rustf-cli/src/commands/schema/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
rustf-cli/src/commands/translations/: mod.rs  parser.rs  scanner.rs  updater.rs
rustf-cli/src/export/: mod.rs
rustf-cli/src/mcp/: cli_executor.rs  instance_registry.rs  interface.rs  mod.rs  resources.rs  server.rs  tools.rs  watcher.rs
rustf-cli/src/routes/: mod.rs
rustf-cli/src/utils/: backup.rs  mod.rs  search.rs  transformers.rs  validators.rs
rustf-cli/src/watcher/: dependencies.rs  events.rs  mod.rs
rustf-cli/templates/components/: controller.rs.template  definition.rs.template  event.rs.template  middleware.rs.template  module.rs.template  worker.rs.template
rustf-cli/templates/models/: base_model.rs.template  base_model_include.rs.template  wrapper_model.rs.template  wrapper_model_include.rs.template
rustf-cli/templates/project/: Cargo.toml.template  README.md.template  config.dev.toml.template  config.toml.template  gitignore.template  main.rs.template
rustf-cli/templates/readmes/: controllers_README.md.template  definitions_README.md.template  middleware_README.md.template  models_README.md.template  models_base_README.md.template  modules_README.md.template  public_css_README.md.template  public_images_README.md.template  public_js_README.md.template  schemas_README.md.template  uploads_README.md.template  views_README.md.template
rustf-cli/templates/schemas/: sessions.yaml.template
rustf-cli/templates/views/home/: about.html.template  index.html.template
rustf-cli/templates/views/layouts/: application.html.template  default.html.template
rustf-macros/: Cargo.toml
rustf-macros/src/: lib.rs
rustf-schema/: Cargo.toml
rustf-schema/src/: lib.rs  mod.rs  parser.rs  types.rs  validator.rs
rustf-schema/src/codegen/: mod.rs  sqlx.rs  templates.rs
rustf-schema/src/codegen/templates/: sql_migration.hbs  sqlx_crud.hbs  sqlx_model.hbs  sqlx_relations.hbs
rustf-schema/tests/: codegen_tests.rs  integration_tests.rs  parser_tests.rs  validator_tests.rs
rustf/benches/: configuration.rs  context.rs  middleware.rs  pool.rs  routing.rs  session.rs
rustf/src/: app.rs  auto.rs  cli.rs  config.rs  configuration.rs  context.rs  db.rs  events.rs  forms.rs  lib.rs  pool.rs  repository.rs  security.rs  shared.rs
rustf/src/cache/: memory.rs  mod.rs  query.rs  response.rs  stats.rs
rustf/src/database/: adapter.rs  config.rs  mod.rs  registry.rs
rustf/src/database/adapters/: mod.rs  (+3 more)
rustf/src/definitions/: helpers.rs  mod.rs  traits.rs  validators.rs
rustf/src/error/: context.rs  logging.rs  mod.rs  pages.rs  retry.rs
rustf/src/events/: builtin.rs
rustf/src/http/: files.rs  mod.rs  request.rs  request_data.rs  response.rs  server.rs
rustf/src/middleware/: mod.rs  traits.rs
rustf/src/migrations/: mod.rs  simple.rs
rustf/src/models/: base_model.rs  filter.rs  mod.rs  model_query.rs  query_builder.rs
rustf/src/routing/: macros.rs  mod.rs  router.rs  trie.rs
rustf/src/security/: csrf.rs  error_handling.rs  headers.rs  static_files.rs  validation.rs
rustf/src/session/: config_adapter.rs  factory.rs  manager.rs  mod.rs  redis.rs  security.rs  storage.rs
rustf/src/utils/: crypto.rs  encoding.rs  geo.rs  http.rs  mod.rs  object.rs  pagination.rs  parsing.rs  random.rs  string.rs
rustf/src/views/: api.rs  mod.rs
rustf/src/workers/: api.rs  context.rs  manager.rs  mod.rs  registry.rs  types.rs
rustf/tests/: auto_discovery_nested_test.rs  context_flash_test.rs  context_preservation_test.rs  enhanced_error_test.rs  filter_integration_test.rs  filter_test.rs  flash_test.rs  header_preservation_test.rs  multiline_directive_test.rs  qualified_column_test.rs  real_world_multiline_test.rs  session_config_test.rs  session_exemption_test.rs  simple_context_test.rs  template_array_length_test.rs  template_expression_test.rs  test_enum_detection.rs  test_enum_where_clauses.rs  test_index_in_expressions.rs  test_index_simple.rs  test_layout_empty_string.rs  test_m_variable.rs  test_null_timestamp_handling.rs  test_postgres_enum_binding.rs  test_repository_variable.rs  test_where_in_fix.rs  view_api_test.rs
rustf/tests/integration/: integration_tests.rs  repository_test.rs
rustf/tests/performance/: events_perf.rs  performance_regression_tests.rs
rustf/tests/security/: security_tests.rs
rustf/tests/unit/: context_tests.rs  query_builder_tests.rs  session_tests.rs  test_sqlvalue_refs.rs
rustf/views/: .placeholder.html  README.md
sample-app/: .gitignore  Cargo.toml  README.md  config.dev.toml  config.dev.toml.redis  config.toml
sample-app/examples/: test_redis_config.rs
sample-app/schemas/: _meta.yaml  users.yaml
sample-app/src/: _models.rs  _modules.rs  main.rs
sample-app/src/models/: MODELS_README.md  users.rs
sample-app/src/modules/: email_service.rs  payment_service.rs  simple_util.rs  string_helpers.rs
sample-app/tests/: test_module_type_safety.rs
(+112 files in other folders)
