[package]
name = "rustf-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for analyzing RustF projects with MCP server support for AI agents"
authors = ["RustF Team"]
license = "MIT OR Apache-2.0"
keywords = ["rustf", "cli", "mcp", "ai", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustf-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }
env_logger = "0.10"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
async-trait = "0.1"

# File system operations
walkdir = "2.3"
notify = "6.1"
glob = "0.3"

# Rust AST parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# String processing
regex = "1.10"

# Configuration and file formats
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
md5 = "0.7"
indexmap = "2.0"

# RustF framework and schema
rustf = { version = "0.1.0", path = "../rustf" }
rustf-schema = { version = "0.1.0", path = "../rustf-schema", features = ["codegen"] }

# Template engine for code generation
handlebars = "4.5"
rust_decimal = "1.32"

# Embed templates at build time
rust-embed = "8.0"

# Random number generation
rand = "0.8"

# Directory utilities
dirs = "5.0"

# Lazy static for global registry
lazy_static = "1.4"

# Database support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
url = "2.4"

# Temporary files for compilation validation
tempfile = "3.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["mcp-server"]
mcp-server = []