[package]
name = "rustf-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for RustF framework - auto-discovery of controllers and models"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
walkdir = "2.4"

[features]
default = []
