[package]
name = "rustf-schema"
version = "0.1.0"
edition = "2021"
description = "Database schema definitions and code generation for RustF framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/numerum-tech/rustf"
keywords = ["database", "schema", "codegen", "ai-friendly"]
categories = ["database", "development-tools"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Utilities
once_cell = "1.0"

# Template engine for code generation
handlebars = { version = "4.5", optional = true }

# Type helpers
chrono = { version = "0.4", features = ["serde"], optional = true }
rust_decimal = { version = "1.32", optional = true }

# Async runtime (needed for parser)
tokio = { version = "1.0", features = ["fs"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "rt", "macros"] }
tempfile = "3.8"

[features]
default = ["codegen", "chrono", "rust_decimal", "tokio"]
codegen = ["handlebars"]
parser = ["tokio"]