[package]
name = "sample-app"
version = "0.1.0"
edition = "2021"
description = "A RustF web application"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Development: Use local path (adjust as needed for your setup)
rustf = { path = "../rustf" }
# For published version, use:
# rustf = { version = "0.1.0", features = ["auto-discovery", "tera-views"] }

# Essential dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# Optional: for database operations
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono", "rust_decimal", "uuid"] }
anyhow = "1.0"
async-trait = "0.1"

# Optional: for date/time handling
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }

# Additional dependencies for shared utilities
regex = "1.10"
once_cell = "1.19"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional: HTTP client
# reqwest = { version = "0.11", features = ["json"] }